[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Vunerable.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.5, 0.5, 0.1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.4, 0.4, 0.1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.960784, 0.164706, 0.105882, 1 )

[sub_resource type="Animation" id=5]
resource_name = "press"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.051 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.15 ) ]
}

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.25, 0.25, 0.25 )

[node name="Spawner" type="Spatial"]
script = ExtResource( 1 )

[node name="Frame" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0504342 )
mesh = SubResource( 1 )
material/0 = null

[node name="Button" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.15 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/press = SubResource( 5 )
anims/reset = SubResource( 4 )

[node name="Vunerable" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="CollisionShape" parent="Vunerable" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25 )
shape = SubResource( 6 )

[connection signal="damage_received" from="Vunerable" to="." method="_on_Vunerable_damage_received"]
[connection signal="invincibility_ended" from="Vunerable" to="." method="_on_Vunerable_invincibility_ended"]
[connection signal="invincibility_started" from="Vunerable" to="." method="_on_Vunerable_invincibility_started"]

[editable path="Vunerable"]
